== Affiliates - Changelog ==

= 5.2.0 =
* WordPress 6.8 compatible.

= 5.1.0 =
* WordPress 6.8 compatible.
* Fixed declaration of dynamic properties of the Affiliates_Pagination class.
* Fixed translation used too early while processing constants.
* Fixed translations used too early while determining currencies.
* Updated recommendations.
* Updated translation template.

= 5.0.0 =
* WordPress 6.7 compatible.
* Requires at least WordPress 6.5.
* Fixes a PHP Warning caused by a malformed comparison when producing totals.
* Fixes performance issues with large InnoDB hits tables when recording hits.
* Fixes a PHP Deprecated notice passing null to version_compare().
* Fixes several instances of PHP Deprecated notices related to the creation of dynamic properties.
* Added the Dutch translation.

= 4.20.0 =
* WordPress 6.6 compatible.
* Requires at least WordPress 6.2.
* Requires at least PHP 7.4.
* Fixed deprecated notice passing null to do_shortcode() in several instances.

= 4.19.0 =
* WordPress 6.2 compatible.
* Requires at least WordPress 6.0.
* Requires at least PHP 7.2.
* Added the affiliates_get_referral_post_permalink API function.
* Added the affiliates_referral_post_permalink filter.
* Added the affiliates_get_referral_post_title API function.
* Added the affiliates_referral_post_title filter.
* Revised the referral post rendering in the Visits & Referrals admin screen.
* Revised the referral post rendering in the Affiliates & Referrals admin screen.
* Revised the referral post rendering in the Referrals admin screen.
* Revised URLs to use https.
* Updated the translation template.
* Added several missing translations.
* Fixed or removed several incorrect translations.

= 4.18.0 =
* WordPress 6.2 compatible.
* Requires at least WordPress 5.9.
* Adds a plugin link to the settings.
* Adds a plugin link to the documentation.
* Adds a plugin link to reveal the welcome note when it is hidden.
* Adds the affiliates_settings_before_section action.