@@ -2,6 +2,10 @@
 
 = 5.2.0 =
 * WordPress 6.8 compatible.
+* Revised Robot Cleaner UI elements.
+* Fixed Robot Cleaner not showing throbber when doing work.
+* Fixed Robots allowed duplicate entries.
+* Added more robust API function to use unlimited time for requests (now used for robot cleaning requests).
 
 = 5.1.0 =
 * WordPress 6.8 compatible.
